demo/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx
  namespace: demo-nginx
spec:
  selector:
    app: demo-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
